Bug 499032 - Ark doesn't show the date column for 7zip archives anymore (used to work before p7zip got replaced by 7zip)
Summary: Ark doesn't show the date column for 7zip archives anymore (used to work befo...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-23 00:49 UTC by Holmes
Modified: 2025-03-05 09:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Holmes 2025-01-23 00:49:36 UTC
SUMMARY
On Arch Linux, Ark doesn't show the date column for 7zip archives anymore.

It last worked before the "p7zip" package got replaced by the "7zip" package.

On other archive formats it shows the date column like zip and tar.

Additionally, on .rar archives the date column is also missing.

STEPS TO REPRODUCE
1. Have 7zip installed instead of p7zip
2. Open an 7zip archive in Ark
3. The date column will be missing, it will not be missing when using p7zip instead

OBSERVED RESULT
Date column missing

EXPECTED RESULT
Date column should be still there like in .zip and .tar

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 2wxsy58236r3 2025-01-25 05:16:07 UTC
From 7-Zip's version history (src-history.txt):

> 22.00          2022-06-16
> -------------------------
> - 7-Zip interfaces now support high precision (1 ns) timestamps with reserved
>   fields of tagPROPVARIANT (VT_FILETIME).

If a file has high precision timestamps (e.g. 7z2409-src.7z), 7-Zip >= 22.00 shows:
> Modified = 2009-10-08 18:12:00.7968750
p7zip 16.02 shows:
> Modified = 2009-10-08 18:12:00

If a file does not have high precision timestamps (e.g. attachment 141089 [details]), 7-Zip >= 22.00 shows the same as p7zip 16.02:
> Modified = 1993-03-16 19:33:38

Maybe this line is causing the issue?
https://invent.kde.org/utilities/ark/-/blob/release/24.12/plugins/cli7zplugin/cliplugin.cpp?ref_type=heads#L246
Comment 2 Bug Janitor Service 2025-01-26 14:17:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/270
Comment 3 Holmes 2025-03-02 03:15:46 UTC
Is there any progress being made so far? For me it appears the merge request is stuck open for over a month and nobody seems to care.
Comment 4 Carl Schwan 2025-03-05 09:48:06 UTC
Git commit ef1b8e4bbb16736e1f0ae6c8df997a76b9e24b47 by Carl Schwan, on behalf of Natsumi Higa.
Committed on 05/03/2025 at 09:47.
Pushed by carlschwan into branch 'master'.

Remove nanoseconds from timestamp

On 7-Zip >= 22.00, timestamps may contain nanoseconds, which breaks parsing.

Keep only the first 19 characters to remove any nanoseconds.

M  +2    -1    plugins/cli7zplugin/cliplugin.cpp

https://invent.kde.org/utilities/ark/-/commit/ef1b8e4bbb16736e1f0ae6c8df997a76b9e24b47
Comment 5 Carl Schwan 2025-03-05 09:48:20 UTC
Git commit d36610d907d1bbb7282212769cd72c40d6c3cd55 by Carl Schwan.
Committed on 05/03/2025 at 09:48.
Pushed by carlschwan into branch 'release/24.12'.

Remove nanoseconds from timestamp

On 7-Zip >= 22.00, timestamps may contain nanoseconds, which breaks parsing.

Keep only the first 19 characters to remove any nanoseconds.


(cherry picked from commit ef1b8e4bbb16736e1f0ae6c8df997a76b9e24b47)

9f08f97e Remove nanoseconds from timestamp

Co-authored-by: Natsumi Higa <grinbus841j@mailgw.com>

M  +2    -1    plugins/cli7zplugin/cliplugin.cpp

https://invent.kde.org/utilities/ark/-/commit/d36610d907d1bbb7282212769cd72c40d6c3cd55