Remove nanoseconds from timestamp

On 7-Zip >= 22.00, timestamps may contain nanoseconds, which breaks parsing.

Keep only the first 19 characters to remove any nanoseconds.

BUG: 499032


(cherry picked from commit ef1b8e4bbb16736e1f0ae6c8df997a76b9e24b47)

9f08f97e Remove nanoseconds from timestamp

Co-authored-by: Natsumi Higa <grinbus841j@mailgw.com>